--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,47 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+
+
+
+#clicker{
+   
+    padding: 20px;
+    color: #ddd;
+    font-size: 1.4em;
+    box-shadow: 0 0 40px yellow;
+    border-radius: 22px;
+}
+
+.btn{
+     font-size: 1.2em; 
+      padding: 20px;
+     border-radius: 26px;
+}
+
+.col-center
+{
+  margin-left: 50%;;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-radius: 18px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 20%;
+}
+
+#rojo{
+    text-align: center;
+}
+
+#naranja{
+    text-align: center;
+}
+#verde {
+    text-align: center;
+}
+
+.fondo{
+    background-color: red;
+}
